# aicc

./: .gitignore  EXTENSION_PLAN.md  FINAL_SUMMARY.md  LICENSE  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/plans/: jolly-percolating-pearl.md
docs/: logo.txt
examples/: README.md  arithmetic.c  char_test.c  fibonacci_printf.c  hello_printf.c  multiple_printf.c
scripts/: run_tests.sh  show_logo.py
src/aicc/: __init__.py  __main__.py  ast_nodes.py  builtins.py  codegen.py  codegen_arm64.py  lexer.py  parser.py  preprocessor.py  semantic.py  tokens.py
tests/: test_codegen.py  test_integration.py  test_lexer.py  test_parser.py  test_printf.py  test_semantic.py
